--- a/css/abhishekrajravi.css
+++ b/css/abhishekrajravi.css
@@ -46,7 +46,7 @@
 .home-section{
 	width: 100%;
 	height: 100vh;
-	background-image:url(https://github.com/arrbxr/portfolio/blob/master/img/back.jpg?raw=true);
+	background-image:url(https://github.com/arrbxr/arrbxr.github.io/blob/master/img/back.jpg?raw=true);
 	background-size: cover;
 }
 
